# algo25_02

./: .gitignore  01_array_zero_prefix_counting.md  02_count_leading_zeroes.md  02_count_leading_zeroes.rs  03_polynomial_evaluation.md  03_polynomial_evaluation.rs  04_find_any_duplicate.md  04_find_any_duplicate.rs  05_cyclic_permutation.md  05_cyclic_permutation.rs  06_merge_arrays.md  06_reverse_words_in_sentence.md  07_remove_length.md  08_reverse_words.rs  08_reverse_words_in_sentence.md  09_anagram_check.rs  10_distinct_anagram_groups.rs  11_anchor_puzzle.md  11_anchor_puzzle.rs  12_phone_pad_combinations.md  12_phone_pad_combinations.rs  12_phone_pad_combinations_roast.md  13_simple_number_multiplication.rs  14_all_combinations_string_letters.md  14_all_combinations_string_letters.rs  15_bi_repetitive_matrices.md  15_bi_repetitive_matrices.rs  16_halve_list.md  16_halve_list.rs  17_clone_linked_list.md  17_clone_linked_list.rs  18_loop_detection_removal.md  18_loop_detection_removal.rs  19_linked_list_sort.md  19_linked_list_sort.rs  20_tree_similarity.md  20_tree_similarity.rs  21_bottom_up_level.md  21_bottom_up_level.rs  22_zig_zag_traversal.md  (+22 more)
.agent/rules/: rule1.md
